implementing login and auth guard

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-	"appId": "net.driver.pickupsa",
+	"appId": "io.ionic.starter",
 	"appName": "pickup-driver",
 	"webDir": "www",
 	"bundledWebRuntime": false
