--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pickup-driver",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Tarek Bakr",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -23,14 +23,12 @@
     "@capacitor/android": "^3.2.0",
     "@capacitor/app": "1.0.2",
     "@capacitor/core": "3.2.0",
-    "@capacitor/geolocation": "^1.0.2",
-    "@capacitor/haptics": "1.0.2",
+    "@capacitor/geolocation": "^1.1.0",
     "@capacitor/keyboard": "1.0.2",
-    "@capacitor/local-notifications": "^1.0.4",
     "@capacitor/network": "^1.0.2",
-    "@capacitor/push-notifications": "^1.0.3",
-    "@capacitor/status-bar": "1.0.2",
+    "@capacitor/push-notifications": "^1.0.4",
     "@capacitor/storage": "^1.0.3",
+    "@ionic-native/http": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
